src/objects/Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Business_Role_Access__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Role Access</label>
        <referenceTo>Business_Role_Access__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Role_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Role Member</label>
        <referenceTo>Business_Role_Member__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Role</label>
        <referenceTo>Business_Role__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Error Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>